--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="index.js"></script>
+<!--     <script src="index.js"></script>-->
+<!--<script src="protoex.js"></script>-->
+<script src="stopWatch.js"></script>
     <title>Document</title>
 </head>
 
