--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- <script src="index.js"></script> -->
+    <!-- <script src="protoex.js"></script> -->
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<!--     <script src="index.js"></script>-->
-<!--<script src="protoex.js"></script>-->
-<script src="stopWatch.js"></script>
+    <!-- <script src="inherit.js"></script> -->
+    <!-- <script src="stopWatch.js"></script> -->
+    <script src="mixins.js"></script>
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="header">OOPS</div>
     <div class="main">
-        <div>left</div>
-        <div>right</div>
+      <div>mmm</div>
+      <div>right</div>
     </div>
-</body>
-
+  </body>
 </html>
