--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
     <!-- <script src="inherit.js"></script> -->
     <!-- <script src="stopWatch.js"></script> -->
-    <script src="mixins.js"></script>
+   <!--<script src="mixins.js"></script>-->
+    <script src="es6.js"></script>
     <title>Document</title>
   </head>
 
